# demo-project

runtime-host/: Cargo.toml
runtime-host/src/: lib.rs
runtime-host/src/runtime/: mod.rs
runtime-host/src/runtime/common/: gpu.rs
runtime-host/src/runtime/native/: debug.rs  gpu.rs  mod.rs  utilities.rs
runtime-host/wit/: debug.wit  guest.wit  renderer.wit  runtime.wit
runtime-test/: Cargo.toml
runtime-test/src/: main.rs
test-game/: Cargo.toml  README.md  test-game.wasm  wasi_snapshot_preview1.reactor.wasm
test-game/src/: lib.rs
