[package]
name = "wizard-runtime-host"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[build]
# rustflags = ["cfg=web_sys_unstable_apis"]
# target = "x86_64-pc-windows-msvc"
target = "aarch64-linux-android"

[dependencies]
wgpu = "0.17.0"
# wasmtime = { version = "12.0.2", features = ["component-model"] }
# wasmtime-wasi = "12.0.2"
# wasi-cap-std-sync = "12.0.2"
# wasi-common = "12.0.2"
wit-bindgen-core = "0.11.0"
wit-bindgen-rust = "0.11.0"
wit-component = "0.14.0"
anyhow = "1.0.56"
async-trait = "0.1.68"
futures = "0.3.28"
winit = "0.29.1-beta"
pollster = "0.2.5"
once_cell = "1.18.0"
slab = "0.4.9"
uuid = { version = "1.4.1", features = ["v4"] }

[dependencies.wasmtime]
git = "https://github.com/bytecodealliance/wasmtime"
tag = "dev"
features = ["component-model"]

[dependencies.wasmtime-wasi]
git = "https://github.com/bytecodealliance/wasmtime"
tag = "dev"

[dependencies.wasi-cap-std-sync]
git = "https://github.com/bytecodealliance/wasmtime"
tag = "dev"

[dependencies.wasi-common]
git = "https://github.com/bytecodealliance/wasmtime"
tag = "dev"

# [patch.crates-io]

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = "0.2.50"
# js-sys = "0.3.57"

# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# version = "0.3.57"
# features = [
#   'Document',
#   'Element',
#   'HtmlElement',
#   'Node',
#   'Window',
#   'Navigator'
# ]
